2002-03-04  Nick Drochak  <ndrochak@gol.com>

	* JulianCalendar.cs: JulianEra should be field, not a property.
	Thanks CorCompare (and Piers).

2002-02-12  Duncan Mak  <duncan@ximian.com>

	* CultureInfo.cs: Added the Calendar property to make the TimeZone
	class build. It's marked as MonoTODO.

2002-02-12  Nick Drochak  <ndrochak@gol.com>

	* UnicodeCategory.cs: Fix typo.

2002-02-01  Radek Doulik  <rodo@ximian.com>

	* RegionInfo.cs: started work on RegionInfo
	implemented RegionInfo (string) constructor

	* CultureInfo.cs: added internal static function,
	which could be used from RegionInfo.cs

2002-01-16  Miguel de Icaza  <miguel@ximian.com>

	* CultureInfo.cs: Completed the tables.   Now we need to actually
	fill it in.

2002-01-15  Duncan Mak  <duncan@ximian.com>

	* CultureInfo.cs: Convert it to unix text.

2002-01-04  Ravi Pratap  <ravi@ximian.com>

	* GreogrianCalendar.cs : The same old MonoTODO attribute.

2001-11-21  Miguel de Icaza  <miguel@ximian.com>

	* Locale.cs: New file, a place holder for Locale.GetText.

Wed Nov 14 16:47:07 CET 2001 Paolo Molaro <lupus@ximian.com>

	* Calendar.cs: CLSCompliant updates.

2001-11-04  Martin Weindel <martin.weindel@t-online.de>
        * NumberFormatInfo.cs: fixed minor bug in Clone with readonly flag

        * DateTimeFormatInfo.cs: added

        * CultureInfo.cs: some changed needed for compiling DateTimeFormatInfo.cs

2001-10-26  Miguel de Icaza  <miguel@ximian.com>

	* NumberFormatInfo.cs: Provide an internal constructor that takes
	as an argument a CultureInfo ID (LCID) so that we can construct
	different ones here.

	* CultureInfo.cs: Begun implementation.

2001-10-09  Derek Holden  <dholden@draper.com>

	* NumberFormatInfo.cs: Small typo in PercentPositivePattern
	and CurrencyPositivePattern

2001-09-02  Miguel de Icaza  <miguel@ximian.com>

	* Calendar.cs: Implement a bunch of missing features.

2001-07-24  Derek Holden  <dholden@draper.com>
