@@ -16,14 +16,14 @@ namespace System.Globalization {
 		ModifierLetter          =  3,
 		OtherLetter             =  4,
 		NonSpacingMark          =  5,
-		SpaceCombiningMark      =  6,
+		SpacingCombiningMark    =  6,
 		EnclosingMark           =  7,
 		DecimalDigitNumber      =  8,
 		LetterNumber            =  9,
 		OtherNumber             = 10,
 		SpaceSeparator          = 11,
-		LineSeperator           = 12,
-		ParagraphSeperator      = 13,
+		LineSeparator           = 12,
+		ParagraphSeparator      = 13,
 		Control                 = 14,
 		Format                  = 15,
 		Surrogate               = 16,
