@@ -1,3 +1,7 @@
+2002-04-08  Nick Drochak  <ndrochak@gol.com>
+
+	* UnicodeCategory.cs: Fix typos in enum names.
+
 2002-03-04  Nick Drochak  <ndrochak@gol.com>
 
 	* JulianCalendar.cs: JulianEra should be field, not a property.
